changed the main page

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./index.css"/>
     <title>Mohammed S. Yaseen</title>
 </head>
-<body>
+
+<body class="bg-dark">
+
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">MSY</a>
+        <a href="#" class="navbar-brand">Mohammed S. Yaseen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a href="#" class="nav-link">Home<span class="sr-only">(Current)</span></a>
-                </li>
                 <li class="nav-item active">
                     <a href="#" class="nav-link">Contact<span class="sr-only">(Current)</span></a>
                 </li>
@@ -27,71 +27,35 @@
             </ul>
         </div>
     </nav>
+
     <div class="container" style="padding-top: 1%;">
-        <div class="card-columns">
-            <div class="card">
-                <a href="https://www.behance.net/myds">
-                    <img class="card-img-top" src="https://mir-cdn.behance.net/v1/rendition/project_modules/1400_opt_1/58c22745451637.583195021c39e.png" alt="Card image cap">
-                </a>
+      <div class="row" style="margin-top: 20%;">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="cardbody text-left">
+              <h5 class="card-header">My Programming Projects</h5>
               <div class="card-body">
-                <h5 class="card-title">My Art</h5>
-                <p class="card-text">Click to go to my Behance page.</p>
-              </div>
-            </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 23rem;">
-                <div class="card-header">Console app project</div>
-                <div class="card-body">
-                  <h5 class="card-title">WorkGround</h5>
-                  <p class="card-text">A console tool that helps saving the currently open programs and files as a WorkGround and provides the ability to reopen all of them later with only one command.</p>
-                </div>
-              </div>
-            <div class="card">
-              <img class="card-img-top" src="..." alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card bg-info text-white text-center p-3">
-              <blockquote class="blockquote mb-0">
-                <p>"Passion is energy. Feel the power that comes from focusing on what excites you."</p>
-                <footer class="blockquote-footer" style="color: aliceblue;">
-                  <small>
-                    <cite title="Source Title" style="color: aliceblue;">Oprah Winfrey</cite>
-                  </small>
-                </footer>
-              </blockquote>
-            </div>
-            <div class="card text-center">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img" src="..." alt="Card image">
-            </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 23rem;">
-                <div class="card-header">WebApp Game project</div>
-                <div class="card-body">
-                  <h5 class="card-title">Colors Game</h5>
-                  <p class="card-text">A simple game to guess the color corresponding to a particular RGB value.</p>
-                  <a href="https://www.colorsgame.ga">
-                    <p class="card-text">Start playing</p>
-                  </a>
-                </div>
-            </div>
-            <div class="card bg-light mb-3" style="max-width: 23rem;">
-                <div class="card-header">Android App project</div>
-                <img class="card-img-top" src="swop.jpg" alt="Card image cap" style="height: 200; width: 200;">
-                <div class="card-body">
-                <h5 class="card-title">Swap Swop</h5>
-                <p class="card-text">A platform that allows users to exchange items and tasks between themselves.</p>
+                <h1 class="icon text-center">&lt;/&gt;</h1>
+                <a href="./Code-Projects.html" class="stretched-link"></a>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="cardbody text-left">
+              <h5 class="card-header">My Art</h5>
+              <div class="card-body">
+                 <h1 class="icon text-center">🎨</h1>
+                 <a href="./Art.html" class="stretched-link"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+          
 
     </div>
 
