--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="./bg.css"/>
+
     <title>Mohammed S. Yaseen</title>
 </head>
+
+<!-- BG -->
+<div class="content">
+  <div id="large-header" class="large-header">
+    <canvas id="demo-canvas"></canvas>
+  </div>
+</div>
 
 <body class="bg-dark">
 
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">Mohammed S. Yaseen</a>
+        <a href="./index.html" class="navbar-brand" id="logo">Mohammed S. Yaseen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,22 +38,22 @@
     </nav>
 
     <div class="container" style="padding-top: 1%;">
-      <div class="row" style="margin-top: 20%;">
+      <div class="row" style="margin-top: 15%;">
         <div class="col-sm-6">
-          <div class="card">
-            <div class="cardbody text-left">
+          <div class="card bg-dark">
+            <div class="cardbody text-left text-white">
               <h5 class="card-header">My Programming Projects</h5>
               <div class="card-body">
                 <h1 class="icon text-center">&lt;/&gt;</h1>
-                <a href="./Code-Projects.html" class="stretched-link"></a>
+                <a href="./CodeProjects.html" class="stretched-link"></a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="col-sm-6">
-          <div class="card">
-            <div class="cardbody text-left">
+          <div class="card bg-dark">
+            <div class="cardbody text-left text-white">
               <h5 class="card-header">My Art</h5>
               <div class="card-body">
                  <h1 class="icon text-center">🎨</h1>
@@ -53,15 +62,14 @@
             </div>
           </div>
         </div>
-        
       </div>
-          
-
     </div>
-
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js"></script>
 </html>
