--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <h5 class="card-header">My Programming Projects</h5>
               <div class="card-body">
                 <h1 class="icon text-center">&lt;/&gt;</h1>
-                <a href="./CodeProjects.html" class="stretched-link"></a>
+                <a href="./codeProjects.html" class="stretched-link"></a>
               </div>
             </div>
           </div>
@@ -57,7 +57,7 @@
               <h5 class="card-header">My Art</h5>
               <div class="card-body">
                  <h1 class="icon text-center">🎨</h1>
-                 <a href="./Art.html" class="stretched-link"></a>
+                 <a href="./art.html" class="stretched-link"></a>
               </div>
             </div>
           </div>
