modified dirs + added projects to codeProjects

--- a/codeProjects.html
+++ b/codeProjects.html
@@ -40,44 +40,30 @@
     <div class="container" style="padding-top: 1%;">
       <div class="card-columns">
         <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/WG.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
+              <h5 class="card-title">WorkGround</h5>
+              <p class="card-text">WorkGround (wg) is a console tool that helps saving the currently open programs and files as a WorkGround and provides the ability to reopen all of them later with only one command.</p>
+            </div>
+        </div>
+        <div class="card bg-dark text-white">
+            <img src="Public/Media/ColorsGame.png" class="card-img-top" alt="myd logo">
+            <div class="card-body">
+              <h5 class="card-title">Colors Game</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
         </div>
         <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/swop.jpg" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
+              <h5 class="card-title">Swap Swop</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
         </div>
         <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/CppVisual.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
+              <h5 class="card-title">CppVisual</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
         </div>
