finished projects and art pages

--- a/art.html
+++ b/art.html
@@ -19,7 +19,6 @@
 </div>
 
 <body class="bg-dark">
-
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a href="./index.html" class="navbar-brand" id="logo">Mohammed S. Yaseen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,50 +37,49 @@
     </nav>
 
     <div class="container" style="padding-top: 1%;">
-      <div class="card-columns">
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
+      <div class="row">
+        <div class="card-columns">
+          <div class="card bg-dark text-white">
+              <img src="Public/Media/myd.gif" class="card-img-top" alt="myd logo">
+              <div class="card-body">
+                <h5 class="card-title">Personal Branding</h5>
+                <p class="card-text">I used this brand when I was working as a graphic designer.</p>
+                <a href="https://www.behance.net/gallery/43198869/Personal-Branding-Mohamad-Yaseen-Designs-%28logo-des%29" class="btn btn-dark">Learn more</a>
+              </div>
+          </div>
+          <div class="card bg-dark text-white">
+            <img src="Public/Media/art4.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">THE POLLUTION</h5>
+              <p class="card-text">I created this graphic design to contribute in raising awareness about the dangers of pollution on the environment.</p>
+              <a href="https://www.behance.net/gallery/42736611/SAVE-THE-ARCTIC" class="btn btn-dark">Learn more</a>
+            </div>
+          </div>
+          <div class="card bg-dark text-white">
+              <img src="Public/Media/art2.png" class="card-img-top" alt="myd logo">
+              <div class="card-body">
+                <h5 class="card-title">SAVE THE ARCTIC</h5>
+                <p class="card-text">I have made this design in solidarity with the volunteers in all over the world to save the arctic.</p>
+                <a href="https://www.behance.net/gallery/42736611/SAVE-THE-ARCTIC" class="btn btn-dark">Learn more</a>
+              </div>
+          </div>    
+          <div class="card bg-dark text-white">
+            <img src="Public/Media/art1.png" class="card-img-top" alt="myd logo">
+            <div class="card-body">
+              <h5 class="card-title">Wooden Landscape on FLOOR!</h5>
+              <p class="card-text"></p>
+              <a href="https://www.behance.net/gallery/42736329/Wooden-Landscape-on-FLOOR" class="btn btn-dark">Learn more</a>
             </div>
         </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-        <div class="card bg-dark text-white">
-            <img src="MYD.jpg" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Card title that wraps to a new line</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
         </div>
       </div>
+
+      <div class="row justify-content-center">
+        <div class="col-3">
+          <a class="btn btn-dark" id="moreBtn" href="https://www.behance.net/myds" role="button">More on my Behance account</a>
+        </div>
+      </div>
+
     </div>
 
 </body>
