--- a/codeProjects.html
+++ b/codeProjects.html
@@ -42,29 +42,37 @@
         <div class="card bg-dark text-white">
             <img src="Public/Media/WG.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">WorkGround</h5>
+              <h5 class="card-title">WorkGround <span class="badge badge-pill badge-warning title-badge">under developement</span></h5>
               <p class="card-text">WorkGround (wg) is a console tool that helps saving the currently open programs and files as a WorkGround and provides the ability to reopen all of them later with only one command.</p>
+              <a href="https://github.com/mohasarc/WorkGround" target="_blank" class="btn btn-secondary">Visit Repository</a>
+              <a href="https://github.com/mohasarc/WorkGround/blob/master/README.md" target="_blank" class="btn btn-info">Learn more</a>
             </div>
         </div>
         <div class="card bg-dark text-white">
             <img src="Public/Media/ColorsGame.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Colors Game</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Colors Game <span class="badge badge-pill badge-success title-badge">finished</span> </h5>
+              <p class="card-text">A simple game to guess the color corresponding to a particular RGB value.</p>
+              <a href="https://github.com/mohasarc/ColorsGame" target="_blank" class="btn btn-secondary">Visit Repository</a>
+              <a href="https://colorsgame.ga" target="_blank" class="btn btn-success">Start playing</a>
             </div>
         </div>
         <div class="card bg-dark text-white">
             <img src="Public/Media/swop.jpg" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">Swap Swop</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Swap Swop <span class="badge badge-pill badge-secondary title-badge">Demo version</span> </h5>
+              <p class="card-text">an internet based exchange platform. Its
+                aim is to help users not only rid of their unused items, but also get in touch
+                with the people in their surroundings.</p>
+                <a href="https://github.com/mohasarc/SwapSwop" target="_blank" class="btn btn-secondary">Visit Repository</a>
             </div>
         </div>
         <div class="card bg-dark text-white">
             <img src="Public/Media/CppVisual.png" class="card-img-top" alt="myd logo">
             <div class="card-body">
-              <h5 class="card-title">CppVisual</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">CppVisual <span class="badge badge-pill badge-warning title-badge">under developement</span></h5>
+              <p class="card-text">a tool to visualize c++ code.</p>
+              <a href="https://github.com/mohasarc/cppVisual" target="_blank" class="btn btn-secondary">Visit Repository</a>
             </div>
         </div>
       </div>
