--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a href="#" class="nav-link">Contact<span class="sr-only">(Current)</span></a>
+                    <a href="./contact.html" class="nav-link">Contact<span class="sr-only">(Current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a href="#" class="nav-link">About<span class="sr-only">(Current)</span></a>
+                    <a href="./about.html" class="nav-link">About<span class="sr-only">(Current)</span></a>
                 </li>
             </ul>
         </div>
