fixed social icons size bug

--- a/contact.html
+++ b/contact.html
@@ -45,25 +45,25 @@
                       <p class="lead">You can find me on one of the folowing contact information.</p>
                       <hr class="my-4">
                       <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/instagram.png" class="rounded" style="width: 5%; height: 5%;" alt="instagram">
+                        <img src="./Public/Media/SocialMediaLogos/instagram.png" class="rounded socialIcons" alt="instagram">
                       </a>
                       <a href="https://twitter.com/mohas_arc" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/twitter.png" class="rounded" style="width: 5%; height: 5%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/twitter.png" class="rounded socialIcons" alt="">
                       </a>
                       <a href="https://www.youtube.com/HTDTchaNNel" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/youtube.png" class="rounded" style="width: 5%; height: 5%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/youtube.png" class="rounded socialIcons" alt="">
                       </a>
                       <a href="https://www.facebook.com/mohamad.sameer.35" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/facebook.png" class="rounded" style="width: 5%; height: 5%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/facebook.png" class="rounded socialIcons" alt="">
                       </a>
                       <a href="https://www.behance.net/myds" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/behance.png" class="rounded" style="width: 5%; height: 5%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/behance.png" class="rounded socialIcons" alt="">
                       </a>
                       <a href="https://github.com/mohasarc" target="_blank">
-                        <img src="./Public/Media/SocialMediaLogos/github.png" class="rounded" style="width: 6%; height: 6%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/github.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="">
                       </a>
                       <a href="mailto:moha.98.1900@gmail.com">
-                        <img src="./Public/Media/SocialMediaLogos/gmail.png" class="rounded" style="width: 6%; height: 6%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/gmail.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="">
                       </a>
                     </div>
                 </div>
