fixed personal picture size bug

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         <div class="col-4">
                             <div class="container">
                                 <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
-                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style="max-width: 100%;">
+                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style=" min-width: 60pt; max-width: 100%;">
                                 </a>
                             </div>
                         </div>
