--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <li class="nav-item active">
                     <a href="./about.html" class="nav-link">About<span class="sr-only">(Current)</span></a>
                 </li>
+                <li class="nav-item active">
+                  <a href="./codeProjects.html" class="nav-link">My Programming Projects<span class="sr-only">(Current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a href="./art.html" class="nav-link">My Art<span class="sr-only">(Current)</span></a>
+                </li>
             </ul>
         </div>
     </nav>
