--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
             <div class="col-12">
                 <div class="jumbotron bg-dark text-white">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-4" style="min-width: 60pt;">
                             <div class="container">
                                 <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
-                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style=" min-width: 60pt; max-width: 100%;">
+                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style="max-width: 100%;">
                                 </a>
                             </div>
                         </div>
