fixed personal picture size and margin bug

--- a/about.html
+++ b/about.html
@@ -46,15 +46,15 @@
         <div class="row">
             <div class="col-12">
                 <div class="jumbotron bg-dark text-white">
-                    <div class="row">
-                        <div class="col-4" style="min-width: 60pt;">
+                    <div class="row justify-content-center">
+                        <div class="col-8 col-md-4" style="min-width: 60pt; margin-bottom: 2%; margin-top: 2%;">
                             <div class="container">
                                 <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
                                     <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style="max-width: 100%;">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-12 col-md-8" style="margin-bottom: 2%; margin-top: 10%;">
                             <div class="container">
                                 <h1 class="display-4">About Me</h1>
                                 <p class="lead">I am, simply, a pationate computer egineer student who loves design and creativity.</p>
