--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                         <div class="col-12 col-md-8" style="margin-bottom: 2%; margin-top: 10%;">
                             <div class="container">
                                 <h1 class="display-4">About Me</h1>
-                                <p class="lead">I am, simply, a pationate computer egineer student who loves design and creativity.</p>
+                                <p class="lead">I am, simply, a pationate computer egineering student who loves design and creativity.</p>
                             </div>
                         </div>
                     </div>
