added swapSwop UI design

--- a/swapSwopDesign.html
+++ b/swapSwopDesign.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./swapSwopDesign.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
@@ -19,6 +20,7 @@
 </div>
 
 <body class="bg-dark">
+
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <a href="./index.html" class="navbar-brand" id="logo">Mohammed S. Yaseen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,58 +44,28 @@
         </div>
     </nav>
 
-    <div class="container" style="padding-top: 1%;">
-      <div class="row">
-        <div class="card-columns">
-          <div class="card bg-dark text-white">
-              <img src="Public/Media/myd.gif" class="card-img-top" alt="myd logo">
-              <div class="card-body">
-                <h5 class="card-title">Personal Branding</h5>
-                <p class="card-text">I used this brand when I was working as a graphic designer.</p>
-                <a href="https://www.behance.net/gallery/43198869/Personal-Branding-Mohamad-Yaseen-Designs-%28logo-des%29" class="btn btn-dark">Learn more</a>
-              </div>
-          </div>
-          <div class="card bg-dark text-white">
-            <img src="Public/Media/art4.png" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">THE POLLUTION</h5>
-              <p class="card-text">I created this graphic design to contribute in raising awareness about the dangers of pollution on the environment.</p>
-              <a href="https://www.behance.net/gallery/42736611/SAVE-THE-ARCTIC" class="btn btn-dark">Learn more</a>
+    <div class="container" style="padding-top: 1%;" style="height: 50px;">
+        
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="row">
+                    <div class="col-md-auto">
+                        <main>
+                            <div class="device" >
+                              <section>
+                                <img id="device" src="./Public/Media/SwapSwop/1.jpg" alt="screen" style="height:inherit;">
+                              </section>
+                            </div>
+                        </main>
+                    </div>
+                </div>                
             </div>
-          </div>
-          <div class="card bg-dark text-white">
-              <img src="Public/Media/art2.png" class="card-img-top" alt="myd logo">
-              <div class="card-body">
-                <h5 class="card-title">SAVE THE ARCTIC</h5>
-                <p class="card-text">I have made this design in solidarity with the volunteers in all over the world to save the arctic.</p>
-                <a href="https://www.behance.net/gallery/42736611/SAVE-THE-ARCTIC" class="btn btn-dark">Learn more</a>
-              </div>
-          </div>    
-          <div class="card bg-dark text-white">
-            <img src="Public/Media/art1.png" class="card-img-top" alt="myd logo">
-            <div class="card-body">
-              <h5 class="card-title">Wooden Landscape on FLOOR!</h5>
-              <p class="card-text"></p>
-              <a href="https://www.behance.net/gallery/42736329/Wooden-Landscape-on-FLOOR" class="btn btn-dark">Learn more</a>
+            <div class="col-md-auto text-white" style="padding-top: 1%;">
+                <h5>SwapSwop Project Design</h5>
+                <p>I made this design to be the UI for one of my faculty cources project</p>
+                <button id="btnL" class="btn btn-dark btn-sm">Next Screen</button>
             </div>
         </div>
-        <div class="card bg-dark text-white">
-          <img src="Public/Media/SwapSwop/3.jpg" class="card-img-top" alt="SwapSwop">
-          <div class="card-body">
-            <h5 class="card-title">SwapSwop application UI design</h5>
-            <p class="card-text">I have made this for my project for one of my university courses</p>
-            <a href="./swapSwopDesign.html" class="btn btn-dark">Interactive view</a>
-          </div>
-      </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="col-3">
-          <a class="btn btn-dark" id="moreBtn" href="https://www.behance.net/myds" role="button">More on my Behance account</a>
-        </div>
-      </div>
-
     </div>
 
 </body>
@@ -103,4 +75,5 @@
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
 <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo.js"></script>
+<script src="./swapSwopDesign.js"></script>
 </html>
