general website improvements

--- a/art.html
+++ b/art.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
-    <title>Mohammed S. Yaseen</title>
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic.jpg">
+    <meta name="description" content="samples of my Artistic work">
+    <title>Artwork samples</title>
 </head>
 
 <!-- BG -->
