--- a/codeProjects.html
+++ b/codeProjects.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
-    <title>Mohammed S. Yaseen</title>
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic.jpg">
+    <meta name="description" content="samples of my Artistic work">
+    <title>Code Projects</title>
 </head>
 
 <!-- BG -->
@@ -46,7 +48,7 @@
     <div class="container" style="padding-top: 1%;">
       <div class="card-columns">
         <div class="card bg-dark text-white">
-            <img src="Public/Media/WG.png" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/WG.png" class="card-img-top" alt="WorkGround logo">
             <div class="card-body">
               <h5 class="card-title">WorkGround <span class="badge badge-pill badge-warning title-badge">under developement</span></h5>
               <p class="card-text">WorkGround (wg) is a console tool that helps saving the currently open programs and files as a WorkGround and provides the ability to reopen all of them later with only one command.</p>
@@ -55,7 +57,16 @@
             </div>
         </div>
         <div class="card bg-dark text-white">
-            <img src="Public/Media/ColorsGame.png" class="card-img-top" alt="myd logo">
+          <img src="Public/Media/treeviz.png" class="card-img-top" alt="TreeViz logo">
+          <div class="card-body">
+            <h5 class="card-title">TreeViz <span class="badge badge-pill badge-success title-badge">Released</span></h5>
+            <p class="card-text">TreeViz is used to visualize and convert multiple different types of trees including Binary, AVL, and B-tree. TreeViz includes supports many features including Auto generate, Zoom in / out, Full screen, Animation, Store tree and more</p>
+            <a href="http://www.treeviz.xyz/" target="_blank" class="btn btn-secondary">Visit Website</a>
+            <a href="https://www.youtube.com/channel/UCK7IL7eG_Dmf0xCuL5gvotg" target="_blank" class="btn btn-info">Learn how to use it</a>
+          </div>
+        </div>
+        <div class="card bg-dark text-white">
+            <img src="Public/Media/ColorsGame.png" class="card-img-top" alt="ColorsGame logo">
             <div class="card-body">
               <h5 class="card-title">Colors Game <span class="badge badge-pill badge-success title-badge">finished</span> </h5>
               <p class="card-text">A simple game to guess the color corresponding to a particular RGB value.</p>
@@ -64,7 +75,7 @@
             </div>
         </div>
         <div class="card bg-dark text-white">
-            <img src="Public/Media/swop.jpg" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/swop.jpg" class="card-img-top" alt="SwapSwop logo">
             <div class="card-body">
               <h5 class="card-title">Swap Swop <span class="badge badge-pill badge-secondary title-badge">Demo version</span> </h5>
               <p class="card-text">an internet based exchange platform. Its
@@ -74,7 +85,7 @@
             </div>
         </div>
         <div class="card bg-dark text-white">
-            <img src="Public/Media/CppVisual.png" class="card-img-top" alt="myd logo">
+            <img src="Public/Media/CppVisual.png" class="card-img-top" alt="CppVisual logo">
             <div class="card-body">
               <h5 class="card-title">CppVisual <span class="badge badge-pill badge-warning title-badge">under developement</span></h5>
               <p class="card-text">a tool to visualize c++ code.</p>
