--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic.jpg">
+    <meta name="description" content="Mohammed S. Yaseen's personal website">
     <title>Mohammed S. Yaseen</title>
 </head>
 
@@ -44,13 +46,14 @@
     </nav>
 
     <div class="container" style="padding-top: 1%;">
+      <h1>Wlcome to my website :)</h1>
       <div class="row" style="margin-top: 15%;">
         <div class="col-sm-6">
           <div class="card bg-dark">
             <div class="cardbody text-left text-white">
               <h5 class="card-header">My Programming Projects</h5>
               <div class="card-body">
-                <h1 class="icon text-center">&lt;/&gt;</h1>
+                <h2 class="icon text-center">&lt;/&gt;</h2>
                 <a href="./codeProjects.html" class="stretched-link"></a>
               </div>
             </div>
@@ -62,7 +65,7 @@
             <div class="cardbody text-left text-white">
               <h5 class="card-header">My Art</h5>
               <div class="card-body">
-                 <h1 class="icon text-center">🎨</h1>
+                 <h2 class="icon text-center">🎨</h2>
                  <a href="./art.html" class="stretched-link"></a>
               </div>
             </div>
