--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
-    <title>Mohammed S. Yaseen</title>
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic-icon.jpg">
+    <meta name="description" content="More informamtion about me">
+    <title>About Mohammed S. Yaseen</title>
 </head>
 
 <!-- BG -->
@@ -50,7 +52,7 @@
                         <div class="col-8 col-md-4" style="min-width: 60pt; margin-bottom: 2%; margin-top: 2%;">
                             <div class="container">
                                 <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
-                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="instagram" style="max-width: 100%;">
+                                    <img src="./Public/Media/myPic.jpg" class="rounded-circle" alt="Mohammed S. Yaseen | mohasarc" style="max-width: 100%;">
                                 </a>
                             </div>
                         </div>
