--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
-    <title>Mohammed S. Yaseen</title>
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic.jpg">
+    <meta name="description" content="My contact channels">
+    <title>Contact Mohammed S. Yaseen</title>
 </head>
 
 <!-- BG -->
@@ -48,9 +50,9 @@
                 <div class="jumbotron bg-dark text-white">
                     <div class="container">
                       <h1 class="display-4">Contact Me</h1>
-                      <p class="lead">You can find me on one of the folowing contact information.</p>
+                      <p class="lead">You can find me on one of the folowing contact channels.</p>
                       <hr class="my-4">
-                      <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
+                      <!-- <a href="https://www.instagram.com/moha.s_arc/" target="_blank">
                         <img src="./Public/Media/SocialMediaLogos/instagram.png" class="rounded socialIcons" alt="instagram">
                       </a>
                       <a href="https://twitter.com/mohas_arc" target="_blank">
@@ -67,9 +69,12 @@
                       </a>
                       <a href="https://github.com/mohasarc" target="_blank">
                         <img src="./Public/Media/SocialMediaLogos/github.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="">
+                      </a> -->
+                      <a href="https://www.linkedin.com/in/mohasy/">
+                        <img src="./Public/Media/SocialMediaLogos/linkedin.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="Mohammed sameer yaseen's linkedin account">
                       </a>
                       <a href="mailto:moha.98.1900@gmail.com">
-                        <img src="./Public/Media/SocialMediaLogos/gmail.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="">
+                        <img src="./Public/Media/SocialMediaLogos/gmail.png" class="rounded socialIcons" style="width: 6%; height: 6%;" alt="Mohammed sameer yaseen's E-mail address">
                       </a>
                     </div>
                 </div>
