--- a/swapSwopDesign.html
+++ b/swapSwopDesign.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./index.css"/>
     <link rel="stylesheet" href="./bg.css"/>
 
-    <title>Mohammed S. Yaseen</title>
+    <link rel="icon" type="image/x-icon" href="./Public/Media/myPic-icon.jpg">
+    <title>SwapSwop UI design interactive view</title>
 </head>
 
 <!-- BG -->
