--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class="container" style="padding-top: 1%;">
-      <h1>Wlcome to my website :)</h1>
+      <h1>Mohammed S. Yaseen's personal website</h1>
       <div class="row" style="margin-top: 15%;">
         <div class="col-sm-6">
           <div class="card bg-dark">
