--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                             <div class="container">
                                 <h1 class="display-4">About Me</h1>
                                 <p class="lead">I am, simply, a pationate computer egineering student who loves design and creativity.</p>
-                                <p><a href="./public/Media/cv.pdf">My resume</a></p>
+                                <p><a href="./Public/Media/cv.pdf">My resume</a></p>
                             </div>
                         </div>
                     </div>
